--- a/frontend/src/app/pages/movies/movie-list/movie-list.component.html
+++ b/frontend/src/app/pages/movies/movie-list/movie-list.component.html
@@ -1,7 +1,9 @@
 <div class="p-4">
-    <div class="flex justify-content-between align-items-center mb-4">
-        <h1>Movies</h1>
-        <p-button *ngIf="isAdmin" icon="pi pi-plus" label="Add Movie" routerLink="/admin/movies/create"></p-button>
+    <div class="flex justify-content-between align-items-center mb-4" style="gap: 1rem;">
+        <h1 class="m-0" style="line-height: 1;">Movies</h1>
+        <div class="flex align-items-center">
+            <p-button *ngIf="isAdmin" icon="pi pi-plus" label="Add Movie" routerLink="/admin/movies/create"></p-button>
+        </div>
     </div>
 
     <p-table [value]="movies" [paginator]="true" [rows]="10" styleClass="p-datatable-sm"
