--- a/frontend/src/app/pages/showings/showing-list/showing-list.component.html
+++ b/frontend/src/app/pages/showings/showing-list/showing-list.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
-    <div class="flex justify-content-between align-items-center mb-4">
-        <h1>Movie Showings</h1>
+    <div class="flex flex-column align-items-center justify-content-center mb-4 mt-4 gap-3">
+        <h1 class="m-0" style="line-height: 1;">Movie Showings</h1>
         <p-button *ngIf="isAdmin" icon="pi pi-plus" label="Add Showing" routerLink="/admin/showings/create"></p-button>
     </div>
 
