fix: (FE) theater related components styling

--- a/frontend/src/app/pages/theaters/theater-list/theater-list.component.html
+++ b/frontend/src/app/pages/theaters/theater-list/theater-list.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
     <div class="flex justify-content-between align-items-center mb-4">
-        <h1>Theaters</h1>
+        <h1 class="mr-4" style="line-height: 1;">Theaters</h1>
         <p-button *ngIf="isAdmin" icon="pi pi-plus" label="Add Theater" routerLink="/admin/theaters/create"></p-button>
     </div>
 
