--- a/frontend/src/app/pages/theaters/theater-form/theater-form.component.html
+++ b/frontend/src/app/pages/theaters/theater-form/theater-form.component.html
@@ -1,26 +1,52 @@
 <div class="p-4">
     <p-card [header]="isEditMode ? 'Edit Theater' : 'Create Theater'" styleClass="shadow-lg">
         <form [formGroup]="theaterForm" (ngSubmit)="onSubmit()">
-            <div class="grid">
-                <div class="col-12 md:col-6 field">
+            <div class="flex flex-col gap-4">
+                <div class="field flex flex-col gap-2">
                     <label for="name">Theater Name</label>
-                    <input id="name" type="text" pInputText formControlName="name" class="w-full" />
-                    <small *ngIf="theaterForm.get('name')?.invalid && theaterForm.get('name')?.touched"
-                        class="p-error">Name is required</small>
+                    <input
+                        id="name"
+                        type="text"
+                        pInputText
+                        formControlName="name"
+                        class="w-full"
+                    />
+                    <small
+                        *ngIf="theaterForm.get('name')?.invalid && theaterForm.get('name')?.touched"
+                        class="p-error"
+                    >
+                        Name is required
+                    </small>
                 </div>
 
-                <div class="col-12 md:col-6 field">
+                <div class="field flex flex-col gap-2">
                     <label for="capacity">Capacity</label>
-                    <p-inputNumber id="capacity" formControlName="capacity" [min]="1"></p-inputNumber>
-                    <small *ngIf="theaterForm.get('capacity')?.invalid && theaterForm.get('capacity')?.touched"
-                        class="p-error">Capacity is required</small>
+                    <p-inputNumber
+                        id="capacity"
+                        formControlName="capacity"
+                        [min]="1"
+                        class="w-full"
+                    ></p-inputNumber>
+                    <small
+                        *ngIf="theaterForm.get('capacity')?.invalid && theaterForm.get('capacity')?.touched"
+                        class="p-error"
+                    >
+                        Capacity is required
+                    </small>
                 </div>
 
-                <div class="col-12 flex gap-2">
-                    <p-button label="Cancel" styleClass="p-button-secondary" type="button"
-                        routerLink="/theaters"></p-button>
-                    <p-button [label]="isEditMode ? 'Update' : 'Create'" type="submit"
-                        [disabled]="theaterForm.invalid"></p-button>
+                <div class="flex gap-2 mt-2">
+                    <p-button
+                        label="Cancel"
+                        styleClass="p-button-secondary"
+                        type="button"
+                        routerLink="/admin/theaters/"
+                    ></p-button>
+                    <p-button
+                        [label]="isEditMode ? 'Update' : 'Create'"
+                        type="submit"
+                        [disabled]="theaterForm.invalid"
+                    ></p-button>
                 </div>
             </div>
         </form>
