--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -38,3 +38,10 @@ h5 {
 h6 {
     font-size: 1rem;
 }
+
+.no-text-gap {
+    line-height: 1;
+    vertical-align: middle;
+    display: inline-flex;
+    align-items: center;
+  }
